refactor(sex-study): refactor code to get sex graph

--- a/main.ipynb
+++ b/main.ipynb
@@ -70,13 +70,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[0. 0. 0.]\n",
       "        Sexo  Cantidad de respuestas\n",
       "0   Femenino                    24.0\n",
       "1  Masculino                    24.0\n",
@@ -101,6 +102,8 @@
     "# Based in the unique values of the first column, get the number of answers\n",
     "sex_y = np.zeros(len(sex_x))\n",
     "\n",
+    "print(sex_y)\n",
+    "\n",
     "\n",
     "# At the answers column, filter the answers that are not \"Masculino\" or \"Femenino\", and set them to \"Otro\"\n",
     "for i in range(len(data)):\n",
@@ -121,12 +124,12 @@
     "sex_y = np.array([sex_y[0], sex_y[1], sex_y[2]])\n",
     "\n",
     "# Plot the data in bar\n",
-    "fig, ax = plt.subplots()\n",
+    "sex_fig, sex_ax = plt.subplots()\n",
     "\n",
     "# Set the title\n",
-    "ax.set_title(\"Distribución de sexo\")\n",
-    "ax.set_title(\"Estudio de mercado de maizteca\", fontsize=18)\n",
-    "ax.set_xlabel(\"Sexo\", fontsize=14)\n",
+    "sex_ax.set_title(\"Distribución de sexo\")\n",
+    "sex_ax.set_title(\"Estudio de mercado de maizteca\", fontsize=18)\n",
+    "sex_ax.set_xlabel(\"Sexo\", fontsize=14)\n",
     "\n",
     "# Set the bars colors\n",
     "colors = [\"blue\", \"red\", \"green\"]\n",
@@ -135,7 +138,7 @@
     "print(pd.DataFrame( {\"Sexo\": sex_x , \"Cantidad de respuestas\": sex_y}))\n",
     "\n",
     "# Set the x and sex_y labels\n",
-    "ax.bar(sex_x, sex_y, color=colors)\n",
+    "sex_ax.bar(sex_x, sex_y, color=colors)\n",
     "\n",
     "\n",
     "# Show the data\n",
@@ -204,6 +207,34 @@
     "   Se crea una figura y un conjunto de ejes utilizando Matplotlib. Se establece el título de la gráfica y las etiquetas de los ejes. Luego, se generan las barras de la gráfica con colores específicos para cada categoría de sexo y se muestra la gráfica.\n",
     "\n",
     "Este código permite visualizar la distribución de respuestas por sexo en un conjunto de datos, facilitando el análisis de la información recolectada."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Gráfica de edad\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0. 0. 0. 0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get the unique values of the first column\n",
+    "age_x = np.unique(data[:, 2])\n",
+    "age_y = np.zeros(len(age_x))\n",
+    "\n",
+    "print()"
    ]
   }
  ],
